feat: implementação de Pageable e padronização de respostas com ApiResponse para Success e Error